Added browse to file. Added converter type <-> string Added detailed replay view

--- a/RReplay/RReplay.csproj
+++ b/RReplay/RReplay.csproj
@@ -64,6 +64,8 @@
     <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.2.0.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -85,6 +87,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\GameTypeToString.cs" />
+    <Compile Include="Converters\GameModeToString.cs" />
     <Compile Include="Design\DesignReplayRepository.cs" />
     <Compile Include="Model\Game.cs" />
     <Compile Include="Model\Player.cs" />
@@ -93,6 +97,9 @@
     <Compile Include="Model\IReplayRepository.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="View\DetailReplayView.xaml.cs">
+      <DependentUpon>DetailReplayView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\ReplayJSONView.xaml.cs">
       <DependentUpon>ReplayJSONView.xaml</DependentUpon>
     </Compile>
@@ -117,6 +124,10 @@
     <Page Include="Skins\MainSkin.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\DetailReplayView.xaml">
+      <SubType>Form</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\ReplayJSONView.xaml">
       <SubType>Form</SubType>
