Added upgrade settings and bump version to 0.2

--- a/RReplay/App.config
+++ b/RReplay/App.config
@@ -14,7 +14,10 @@
                 <value>True</value>
             </setting>
             <setting name="replaysFolder" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="UpgradeRequired" serializeAs="String">
+                <value>True</value>
             </setting>
         </RReplay.Properties.Settings>
     </userSettings>
