Added Icons for the two buttons.

--- a/RReplay/RReplay.csproj
+++ b/RReplay/RReplay.csproj
@@ -225,6 +225,12 @@
   <ItemGroup>
     <Resource Include="Ressources\comodo_dragon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressources\CopyToClipboard.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressources\Bokehlicia-Pacifica-Steam.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
