Added icons to the ReplayListView context menu. Changed the JSONView Icon to the same as the context menu.

--- a/RReplay/RReplay.csproj
+++ b/RReplay/RReplay.csproj
@@ -231,6 +231,12 @@
   <ItemGroup>
     <Resource Include="Ressources\Bokehlicia-Pacifica-Steam.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressources\FolderOpen.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressources\JSONDocumentOutline_16x.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
