--- a/RReplay/RReplay.csproj
+++ b/RReplay/RReplay.csproj
@@ -237,6 +237,9 @@
   <ItemGroup>
     <Resource Include="Ressources\JSONDocumentOutline_16x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressources\ItemUpdatedAssociation_16x.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
