Added a custom view for the search result.

--- a/RReplay/RReplay.csproj
+++ b/RReplay/RReplay.csproj
@@ -128,6 +128,9 @@
     <Compile Include="SettingsHelper.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="View\AllPlayersDeck.xaml.cs">
+      <DependentUpon>AllPlayersDeck.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\DetailReplayView.xaml.cs">
       <DependentUpon>DetailReplayView.xaml</DependentUpon>
     </Compile>
@@ -155,6 +158,10 @@
     <Page Include="Skins\MainSkin.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\AllPlayersDeck.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\DetailReplayView.xaml">
       <SubType>Form</SubType>
