--- a/RReplay/App.config
+++ b/RReplay/App.config
@@ -19,6 +19,9 @@
             <setting name="UpgradeRequired" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="exeFolder" serializeAs="String">
+                <value />
+            </setting>
         </RReplay.Properties.Settings>
     </userSettings>
 </configuration>
