--- a/RReplay/RReplay.csproj
+++ b/RReplay/RReplay.csproj
@@ -242,6 +242,7 @@
     <EmbeddedResource Include="app.manifest">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="license.rtf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
