--- a/RReplay/packages.config
+++ b/RReplay/packages.config
@@ -5,6 +5,7 @@
   <package id="gong-wpf-dragdrop" version="0.1.4.3" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net451" />
+  <package id="TrustSoft.Xaml.ShaderEffects" version="0.1.1.0" targetFramework="net461" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net451" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net451" />
 </packages>
