--- a/RReplay/packages.config
+++ b/RReplay/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="gong-wpf-dragdrop" version="0.1.4.3" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net451" />
   <package id="TrustSoft.Xaml.ShaderEffects" version="0.1.1.0" targetFramework="net461" />
