Added a launch replay option.

--- a/RReplay/App.config
+++ b/RReplay/App.config
@@ -24,6 +24,9 @@
       <setting name="exeFolder" serializeAs="String">
         <value />
       </setting>
+      <setting name="redDragonExe" serializeAs="String">
+        <value />
+      </setting>
     </RReplay.Properties.Settings>
   </userSettings>
   <entityFramework>
