--- a/RReplay/Properties/Settings.settings
+++ b/RReplay/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="exeFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="redDragonExe" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
