--- a/RReplay/RReplay.csproj
+++ b/RReplay/RReplay.csproj
@@ -198,6 +198,7 @@
     <Compile Include="ProductionPrice.cs">
       <DependentUpon>UnitsModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Settings\RedDragonExeFolder.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Settings\exeFolder.cs" />
     <Compile Include="Settings\ReplayFolderPicker.cs" />
